<resources>
    <string name="app_name">Missing Persons Finder</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="channel_name">Alarms notifications</string>
    <string name="channel_description">Receive Notifications alarms</string>
    <string name="menu_refresh">Refresh</string>
    <string name="api_key">AIzaSyCiLpWn6wbnBEb6wBumkxW8sRE7AJ-V81M</string>
    <string name="menu_clear">Clear Alarms</string>
    <string name="menu_remove_persisted">Remove Past Persisted Alarms</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="click_on_the_plus_to_add_alarm">Click on the \'+\' to add an alarm</string>
    <string name="persist">Persist</string>
    <string name="enter_unique_id">Enter unique id</string>
    <string name="uid">UID</string>
    <string name="start_time">Alarm time: %1$s</string>
    <string name="start_date">Alarm date: %1$s</string>
    <string name="activity_alarms_description">Here you can see the list of existing alarms.\nClick on any of the alarms to cancel it.\nSee settings for more options.</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="cancel_alarm_confirmation_text">Cancel alarm?</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="row_alarm_uid">Uid: </string>
    <string name="row_alarm_time">Time: </string>
    <string name="row_alarm_persist">Persist: </string>
    <string name="remove_persisted_alarms_explanation">Click on settings and choose remove past persisted alarms to cancel previous persisted alarms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>

    <string name="register_a_police_station_click_here">
        Register a Police Station?<b>
        <font color='red'>Click here</font></b>
    </string>

    <string name="already_have_an_account">
        Have an account?
        <big><font color='#9370DB'><b>Sign in</b></font></big>
    </string>

    <string name="text">

    <font size="20">Text in bigger font size 20..</font><font size="10"> Text in normal font size 10</font>
</string>
    <string name="back_to_login_screen">Back to Login Screen</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
</resources>
