<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.RegisterFragment"
    android:background="@drawable/login"
    >

    <ImageView
        android:id="@+id/img_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_105sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/img_logo"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/bg_signup"
        android:paddingHorizontal="@dimen/_15sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/sign_up"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_21sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/roundshap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_user_name"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/person_icon"
                    app:tint="@android:color/white" />

                <EditText
                    android:id="@+id/et1_name_register_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cairo_regular"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:paddingVertical="@dimen/_6sdp"
                    android:textColor="@color/colorwhite"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@android:color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/roundshap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_email"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/email_icon"
                    app:tint="@android:color/white" />

                <EditText
                    android:id="@+id/et2_email_register_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cairo_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="@dimen/_6sdp"
                    android:textColor="@color/colorwhite"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@android:color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/roundshap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_password"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/lock_icon"
                    app:tint="@android:color/white" />

                <EditText
                    android:id="@+id/et3_password_register_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cairo_regular"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword"
                    android:paddingVertical="@dimen/_6sdp"
                    android:textColor="@color/colorwhite"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@android:color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <Button
                android:id="@+id/register_btn_regstr_fragment"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/roundshap"
                android:fontFamily="@font/cairo_bold"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp" />


            <TextView
                android:id="@+id/login_intent_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/register_police_intent_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/register_a_police_station_click_here"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>