<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.RegisterFragment"
    android:background="@drawable/login"
    >

    <ImageView
        android:id="@+id/img_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_105sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/img_logo"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/bg_signup"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="Register Police Station"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/roundshap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_user_name"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/police_icon"
                    app:tint="@android:color/white" />

                <EditText
                    android:id="@+id/et1_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cairo_regular"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingVertical="@dimen/_6sdp"
                    android:textColor="@color/colorwhite"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="@dimen/_12sdp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/roundshap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_email"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/email_icon"
                    app:tint="@android:color/white" />

                <EditText
                    android:id="@+id/et2_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cairo_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="@dimen/_6sdp"
                    android:textColor="@color/colorwhite"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/roundshap"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/phon_icon"
                    app:tint="@android:color/white" />

                <EditText
                    android:id="@+id/et3_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cairo_regular"
                    android:hint="+919595092420"
                    android:inputType="numberDecimal"
                    android:paddingVertical="@dimen/_6sdp"
                    android:textColor="@color/colorwhite"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/roundshap"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/loc_icon_black"
                    app:tint="@android:color/white" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cairo_regular"
                    android:hint="Select Location"
                    android:paddingVertical="@dimen/_6sdp"
                    android:textColor="@color/colorwhite"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/roundshap"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_password"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/lock_icon"
                    />

                <EditText
                    android:id="@+id/et4_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cairo_regular"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword"
                    android:paddingVertical="@dimen/_6sdp"
                    android:textColor="@color/colorwhite"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/roundshap"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp" />


            <TextView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/cairo_bold"
                android:drawableStart="@drawable/back_arrow_black"
                android:text="@string/back_to_login_screen"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:drawableLeft="@drawable/back_arrow_white" />



        </LinearLayout>

    </ScrollView>

</RelativeLayout>